--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,8 +104,8 @@ CurrentPosGridSize=0
 
 [MRU]
 MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/Levels/Area2-MarketMeshStart
-MRUItem2=/Game/Levels/Area1-Rework
+MRUItem1=/Game/Levels/Area1-Rework
+MRUItem2=/Game/Levels/Area2-MarketMeshStart
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem5=/Game/b024899h/ParticleEffectsTest
@@ -259,6 +259,7 @@ HoundAnim_BP_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValu
 ChangeLevelActor_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 BossAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Proto_controller_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+Miner_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -267,7 +268,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
 ContentBrowserTab1.HorizontalSplitter.SlotSize0=0.900000
 ContentBrowserTab1.HorizontalSplitter.SlotSize1=0.900000
-ContentBrowserTab1.ActiveTypeFilters=Material
+ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
@@ -283,7 +284,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Models/weapons
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -311,8 +312,12 @@ LastLevel=/Game/Levels/Demo
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
+OpenAssetsAtExit=/Game/Will/Area1_Blocker_MinableRubble.Area1_Blocker_MinableRubble
+OpenAssetsAtExit=/Game/Will/Pickaxe-SoundBible_com-1937292892.Pickaxe-SoundBible_com-1937292892
+OpenAssetsAtExit=/Game/GW000979/DataStruct/DataTables/WeaponDataTable.WeaponDataTable
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3347,6 +3352,34 @@ REINST_BossAI_C_417.Camera=True
 REINST_BossAI_C_417.Pawn=True
 REINST_BossAI_C_417.Input=True
 REINST_BossAI_C_417.Actor=True
+Actor.Rendering=True
+Actor.Input=True
+Remove_Area1_Blocker_C.TransformCommon=True
+Remove_Area1_Blocker_C.Rendering=True
+Remove_Area1_Blocker_C.Input=True
+Remove_Area1_Blocker_C.Actor=True
+Area1_Blocker_MinableRubble_C.TransformCommon=True
+Area1_Blocker_MinableRubble_C.Rendering=True
+Area1_Blocker_MinableRubble_C.Input=True
+Area1_Blocker_MinableRubble_C.Actor=True
+Area1_Blocker_MinableRubble_C.Tick=True
+Area1_Blocker_MinableRubble_C.Replication=True
+SoundWave.Compression=True
+SoundWave.Streaming=True
+SoundWave.Quality=True
+SoundWave.Sound=True
+SoundWave.SoundWave=True
+SoundWave.Subtitles=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Debug=True
+SoundWave.Concurrency=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
+CrystalBossActor_C.TransformCommon=True
+CrystalBossActor_C.Rendering=True
+CrystalBossActor_C.Input=True
+CrystalBossActor_C.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3517,6 +3550,11 @@ None=======
 /Game/AIAgent/BossAI.BossAI=1
 /Game/Josh/FinalWeapons/Staff__2_.Staff__2_=1
 /Game/AIAgent/Equipment/ChestArmour.ChestArmour=0
+/Game/GW000979/DataStruct/Inventory.Inventory=0
+/Game/Will/Pickaxe-SoundBible_com-1937292892.Pickaxe-SoundBible_com-1937292892=0
+/Game/Models/finishedassets/pickaxe/pickaxe_ben_wilkinson.pickaxe_ben_wilkinson=0
+/Game/Models/finishedassets/PickAxe_Scaled.PickAxe_Scaled=0
+/Game/Will/Miner.Miner=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -3556,7 +3594,7 @@ AIController="\"Object.Idle\" \"Object.Idle\" "
 Controller="\"Object.Idle\" \"Object.Idle\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-TopDownCharacter_C=
+TopDownCharacter_C="\"Object.Mesh\" \"Object.Mesh\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3658,10 +3696,11 @@ AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Set
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 K2Node="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
-BossAI_C=
+BossAI_C="\"Object.Mesh\" \"Object.Mesh\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpression=
+Miner_C="\"Object.Delay\" \"Object.Delay\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -4296,7 +4335,7 @@ ClothingSystemEditorInterface.TimeStamp=2018.12.14-12.01.18
 ClothingSystemEditorInterface.LastCompileMethod=External
 NewLevelDialog.TimeStamp=2018.06.09-14.06.59
 NewLevelDialog.LastCompileMethod=Unknown
-DataTableEditor.TimeStamp=2018.09.20-07.56.08
+DataTableEditor.TimeStamp=2018.12.14-12.01.21
 DataTableEditor.LastCompileMethod=External
 MagicLeap.TimeStamp=2018.12.14-12.13.45
 MagicLeap.LastCompileMethod=External
@@ -4434,7 +4473,7 @@ MapSkeletalMotionToRoot=False
 bASCII=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4465,6 +4504,7 @@ LastLogListing=PIE
 /Game/Models/Armour/LeatherCowlHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/finishedassets/miningtools/pickaxev2.pickaxev2;
 RecentlyPlaced=/Game/b024899h/Particle_Effects/Portal/PortalEffect.PortalEffect;
 RecentlyPlaced=/Game/Levels/LevelTransitions/ChangeLevelActor.ChangeLevelActor;
 RecentlyPlaced=/Game/c024816h/LargeHealthPotion.LargeHealthPotion;
@@ -4484,7 +4524,6 @@ RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.Ac
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
 RecentlyPlaced=/Game/Models/finishedassets/chains/Chains_Unw.Chains_Unw;
-RecentlyPlaced=/Game/AIAgent/DerivedClasses/HybridAI.HybridAI;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4537,26 +4576,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem1=/Game/AIAgent/BossAI
-MRUItem2=/Game/Models/finishedassets/protagenest/Textures/07_-_Default
-MRUItem3=/Game/EnemyAgent/CorruptedSlave
-MRUItem4=/Game/Josh/Gold_Beard
-MRUItem5=/Game/Josh/Skinned_Player_Skeleton
-MRUItem6=/Game/Levels/Demo
-MRUItem7=/Game/AIAgent/ProtoTree
-MRUItem8=/Game/AIAgent/AIController_I
-MRUItem9=/Game/AIAgent/Proto_controller
-MRUItem10=/Game/AIAgent/BaseAI
-MRUItem11=/Game/AIAgent/Equipment/ChestArmour
-MRUItem12=/Game/Josh/Skinned_Player
-MRUItem13=/Game/Models/Armour/BronzeScaleChestArmour/BronzeScaleChest
-MRUItem14=/Game/Josh/FinalWeapons/Staff__2_
-MRUItem15=/Game/Levels/Area2-MarketMeshStart
-MRUItem16=/Game/AIAgent/DerivedClasses/HoundEnemyAI
-MRUItem17=/Game/Levels/LevelTransitions/ChangeLevelActor
-MRUItem18=/Game/Levels/Area1-Rework
-MRUItem19=/Game/Levels/MainMenu
+MRUItem0=/Game/Models/weapons/crystal_sword
+MRUItem1=/Game/Models/finishedassets/PickAxe_Scaled
+MRUItem2=/Game/Models/finishedassets/pickaxe/pickaxe_ben_wilkinson
+MRUItem3=/Game/Levels/Demo
+MRUItem4=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
+MRUItem5=/Game/Will/Pickaxe-SoundBible_com-1937292892
+MRUItem6=/Game/Will/Miner
+MRUItem7=/Game/Will/Area1_Blocker_MinableRubble
+MRUItem8=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem9=/Game/Levels/Area1-Rework
+MRUItem10=/Game/GW000979/DataStruct/Inventory
+MRUItem11=/Game/AIAgent/BossAI
+MRUItem12=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem13=/Game/Models/finishedassets/protagenest/Textures/07_-_Default
+MRUItem14=/Game/EnemyAgent/CorruptedSlave
+MRUItem15=/Game/Josh/Gold_Beard
+MRUItem16=/Game/Josh/Skinned_Player_Skeleton
+MRUItem17=/Game/AIAgent/ProtoTree
+MRUItem18=/Game/AIAgent/AIController_I
+MRUItem19=/Game/AIAgent/Proto_controller
 
 [WidgetTemplatesExpanded]
 Extra=False
