--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,9 +103,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 
 [MRU]
-MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/Levels/Area1-Rework
-MRUItem2=/Game/Levels/Area2-MarketMeshStart
+MRUItem0=/Game/Levels/Area2-MarketMeshStart
+MRUItem1=/Game/Levels/Demo
+MRUItem2=/Game/Levels/Area1-Rework
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem5=/Game/b024899h/ParticleEffectsTest
@@ -284,7 +284,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Models/weapons
+ContentBrowserTab1.SelectedPaths=/Game/Models/finishedassets/ankh,/Game/Models/finishedassets/chains
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -307,17 +307,17 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Levels/Demo
+LastLevel=/Game/Levels/Area2-MarketMeshStart
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
 OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
-OpenAssetsAtExit=/Game/Will/Area1_Blocker_MinableRubble.Area1_Blocker_MinableRubble
-OpenAssetsAtExit=/Game/Will/Pickaxe-SoundBible_com-1937292892.Pickaxe-SoundBible_com-1937292892
-OpenAssetsAtExit=/Game/GW000979/DataStruct/DataTables/WeaponDataTable.WeaponDataTable
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/CheckpointMarker.CheckpointMarker
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
+OpenAssetsAtExit=/Game/Models/finishedassets/chains/Chains_Unw.Chains_Unw
+OpenAssetsAtExit=/Game/Models/finishedassets/ankh/ankh_ben_wilkinson_010519.ankh_ben_wilkinson_010519
+OpenAssetsAtExit=/Game/Models/finishedassets/chains/01_-_Default.01_-_Default
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3380,6 +3380,8 @@ CrystalBossActor_C.TransformCommon=True
 CrystalBossActor_C.Rendering=True
 CrystalBossActor_C.Input=True
 CrystalBossActor_C.Actor=True
+CheckpointMarker_C.Tick=True
+CheckpointMarker_C.Replication=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3696,7 +3698,7 @@ AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Set
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 K2Node="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
-BossAI_C="\"Object.Mesh\" \"Object.Mesh\" "
+BossAI_C=
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpression=
@@ -4504,6 +4506,8 @@ LastLogListing=MapCheck
 /Game/Models/Armour/LeatherCowlHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/Models/finishedassets/ankh/NewMaterial.NewMaterial;
+RecentlyPlaced=/Game/Models/finishedassets/chains/01_-_Default.01_-_Default;
 RecentlyPlaced=/Game/Models/finishedassets/miningtools/pickaxev2.pickaxev2;
 RecentlyPlaced=/Game/b024899h/Particle_Effects/Portal/PortalEffect.PortalEffect;
 RecentlyPlaced=/Game/Levels/LevelTransitions/ChangeLevelActor.ChangeLevelActor;
@@ -4522,8 +4526,6 @@ RecentlyPlaced=/Game/T019847G/FadingMeshes/NewFade_M.NewFade_M;
 RecentlyPlaced=/Game/Materials/Green.Green;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
-RecentlyPlaced=/Game/AIAgent/DerivedClasses/RangedAI.RangedAI;
-RecentlyPlaced=/Game/Models/finishedassets/chains/Chains_Unw.Chains_Unw;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4576,26 +4578,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/weapons/crystal_sword
-MRUItem1=/Game/Models/finishedassets/PickAxe_Scaled
-MRUItem2=/Game/Models/finishedassets/pickaxe/pickaxe_ben_wilkinson
-MRUItem3=/Game/Levels/Demo
-MRUItem4=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
-MRUItem5=/Game/Will/Pickaxe-SoundBible_com-1937292892
-MRUItem6=/Game/Will/Miner
-MRUItem7=/Game/Will/Area1_Blocker_MinableRubble
-MRUItem8=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
-MRUItem9=/Game/Levels/Area1-Rework
-MRUItem10=/Game/GW000979/DataStruct/Inventory
-MRUItem11=/Game/AIAgent/BossAI
-MRUItem12=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem13=/Game/Models/finishedassets/protagenest/Textures/07_-_Default
-MRUItem14=/Game/EnemyAgent/CorruptedSlave
-MRUItem15=/Game/Josh/Gold_Beard
-MRUItem16=/Game/Josh/Skinned_Player_Skeleton
-MRUItem17=/Game/AIAgent/ProtoTree
-MRUItem18=/Game/AIAgent/AIController_I
-MRUItem19=/Game/AIAgent/Proto_controller
+MRUItem0=/Game/Models/finishedassets/chains/01_-_Default
+MRUItem1=/Game/Models/finishedassets/ankh/ankh_ben_wilkinson_010519
+MRUItem2=/Game/Models/finishedassets/chains/Chains_Unw
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem4=/Game/TopDownBP/Blueprints/CheckpointMarker
+MRUItem5=/Game/Levels/Area2-MarketMeshStart
+MRUItem6=/Game/Levels/Demo
+MRUItem7=/Game/AIAgent/BossAI
+MRUItem8=/Game/Models/weapons/crystal_sword
+MRUItem9=/Game/Models/finishedassets/PickAxe_Scaled
+MRUItem10=/Game/Models/finishedassets/pickaxe/pickaxe_ben_wilkinson
+MRUItem11=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
+MRUItem12=/Game/Will/Pickaxe-SoundBible_com-1937292892
+MRUItem13=/Game/Will/Miner
+MRUItem14=/Game/Will/Area1_Blocker_MinableRubble
+MRUItem15=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem16=/Game/Levels/Area1-Rework
+MRUItem17=/Game/GW000979/DataStruct/Inventory
+MRUItem18=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem19=/Game/Models/finishedassets/protagenest/Textures/07_-_Default
 
 [WidgetTemplatesExpanded]
 Extra=False
