--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -284,7 +284,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Models/finishedassets/ankh,/Game/Models/finishedassets/chains
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -307,17 +307,12 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Levels/Area2-MarketMeshStart
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
 OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/CheckpointMarker.CheckpointMarker
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
-OpenAssetsAtExit=/Game/Models/finishedassets/chains/Chains_Unw.Chains_Unw
-OpenAssetsAtExit=/Game/Models/finishedassets/ankh/ankh_ben_wilkinson_010519.ankh_ben_wilkinson_010519
-OpenAssetsAtExit=/Game/Models/finishedassets/chains/01_-_Default.01_-_Default
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -4578,14 +4573,14 @@ PaintDensity=0.090000
 PreserveScaleRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Models/finishedassets/chains/01_-_Default
-MRUItem1=/Game/Models/finishedassets/ankh/ankh_ben_wilkinson_010519
-MRUItem2=/Game/Models/finishedassets/chains/Chains_Unw
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem4=/Game/TopDownBP/Blueprints/CheckpointMarker
-MRUItem5=/Game/Levels/Area2-MarketMeshStart
-MRUItem6=/Game/Levels/Demo
-MRUItem7=/Game/AIAgent/BossAI
+MRUItem0=/Game/AIAgent/BossAI
+MRUItem1=/Game/Models/finishedassets/chains/01_-_Default
+MRUItem2=/Game/Models/finishedassets/ankh/ankh_ben_wilkinson_010519
+MRUItem3=/Game/Models/finishedassets/chains/Chains_Unw
+MRUItem4=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem5=/Game/TopDownBP/Blueprints/CheckpointMarker
+MRUItem6=/Game/Levels/Area2-MarketMeshStart
+MRUItem7=/Game/Levels/Demo
 MRUItem8=/Game/Models/weapons/crystal_sword
 MRUItem9=/Game/Models/finishedassets/PickAxe_Scaled
 MRUItem10=/Game/Models/finishedassets/pickaxe/pickaxe_ben_wilkinson
