miner sound removed

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,9 +104,9 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/Levels/Area1-Rework
-MRUItem1=/Game/Levels/Area2-MarketMeshStart
-MRUItem2=/Game/Levels/Area2-Market
-MRUItem3=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/MainMenu
+MRUItem2=/Game/Levels/Area2-MarketMeshStart
+MRUItem3=/Game/Levels/Area2-Market
 MRUItem4=/Game/Levels/texturedzoo
 MRUItem5=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem6=/Game/Levels/Demo
@@ -262,6 +262,7 @@ LevelSequenceBurnInOptions=TopDownCharacter_C.Collision.Collision,StructProperty
 MovieSceneBindingOverrides=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 DefaultLevelSequenceInstanceData=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 BossAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
+Miner_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -286,7 +287,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Movies
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -311,12 +312,17 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/Area1-Rework
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/area_1_sequencer.area_1_sequencer
+OpenAssetsAtExit=/Game/Chloe/UI/Start_Menu.Start_Menu
+OpenAssetsAtExit=/Game/Will/Miner.Miner
+OpenAssetsAtExit=/Game/Will/Area1_Blocker_MinableRubble.Area1_Blocker_MinableRubble
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
+OpenAssetsAtExit=/Game/Will/Remove_Area1_Blocker.Remove_Area1_Blocker
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3283,6 +3289,40 @@ BossAI_C.Poison=True
 BossAI_C.LifeSteal=True
 BossAI_C.Drop=True
 BossAI_C.Replication=True
+MainMenuMode_C.Tick=True
+MainMenuMode_C.Classes=True
+MainMenuMode_C.Game=True
+MainMenuMode_C.GameMode=True
+Area1_Blocker_MinableRubble_C.TransformCommon=True
+Area1_Blocker_MinableRubble_C.Rendering=True
+Area1_Blocker_MinableRubble_C.Input=True
+Area1_Blocker_MinableRubble_C.Actor=True
+Area1_Blocker_MinableRubble_C.Tick=True
+Area1_Blocker_MinableRubble_C.Replication=True
+Actor.Input=True
+Remove_Area1_Blocker_C.TransformCommon=True
+Remove_Area1_Blocker_C.Rendering=True
+Remove_Area1_Blocker_C.Input=True
+Remove_Area1_Blocker_C.Actor=True
+Remove_Area1_Blocker_C.Tick=True
+Remove_Area1_Blocker_C.Replication=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3469,6 +3509,9 @@ None=======
 /Game/Movies/MenuMediaPlayer_Video.MenuMediaPlayer_Video=0
 /Game/Movies/MainMenuFinal.MainMenuFinal=1
 /Game/AIAgent/DerivedClasses/HoundEnemyAI.HoundEnemyAI=0
+/Game/Movies/FinalMainMenuVideo.FinalMainMenuVideo=1
+/Game/Movies/FinalMainMenuMediaPlayer.FinalMainMenuMediaPlayer=1
+/Game/TopDownBP/Blueprints/MainMenuMode.MainMenuMode=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -3525,10 +3568,10 @@ REINST_TestPawn2_C_290="\"Object.Character.CharacterMovement.Object.Character Mo
 REINST_TestPawn2_C_294="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn2_C_298="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[16]\" "
-BaseWeapon_C="\"Object.WeaponStats\" \"Object.WeaponStats\" "
+BaseWeapon_C=
 TestPawn3_C=
 StaticMeshComponent=
-MeshComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+MeshComponent=
 TopDownCharacterTest_C=
 ShaneToyeSprintTest_C=
 BoxComponent=
@@ -3541,17 +3584,17 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Ability_Wheel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.MediaPlayer\" \"Object.MediaPlayer\" "
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HybridController_C="\"Object.Default.DebugColour\" "
 BehaviorTreeGraphNode_Root=
@@ -3562,7 +3605,7 @@ RangeFinder_C=
 RangedController_C="\"Object.Default.DebugColour\" "
 ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Start_Menu_C=
+Start_Menu_C="\"Object.MediaPlayer\" \"Object.MediaPlayer\" "
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
 BaseAI_C="\"Object.ActiveOnSpawn\" \"Object.ActiveOnSpawn\" "
@@ -3602,7 +3645,7 @@ HumanAnimBP_C=
 DestructibleMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" "
 SkeletalMesh="\"Object.DestructibleMesh.DefaultDestructibleParameters.DebrisParameters.ValidBounds\" "
 DestructibleComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
-SkinnedMeshComponent="\"Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+SkinnedMeshComponent=
 Spawn Item="\"Struct.BarrelLocation\" "
 MoviePlayerSettings="\"Object.Movies.StartupMovies\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -3659,13 +3702,13 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
-GenericImport=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/Movies/MainMenuFinalVid.mp4
+GenericImport=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Movies/FinalMainMenuVideo.mp4
 GenericExport=C:/Users/Tony/Desktop/Level 6/Collab/SK_Mannequin_TD.FBX
 GenericOpen=../../../../../../Users/wstan/Desktop/Github/SCollab-Proto/SP_Prototype/Content/Movies
 GenericSave=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -4418,7 +4461,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=MapCheck
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4524,26 +4567,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem1=/Game/Levels/Area1-Rework
-MRUItem2=/Game/Sequence_1
-MRUItem3=/Game/Levels/Area2-MarketMeshStart
-MRUItem4=/Game/Levels/Area2-Market
-MRUItem5=/Game/c024816h/BasePickUp
-MRUItem6=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
-MRUItem7=/Game/AIAgent/BossAI
-MRUItem8=/Game/Levels/MainMenu
-MRUItem9=/Game/AIAgent/Proto_controller
-MRUItem10=/Game/AIAgent/DerivedClasses/HoundEnemyAI
-MRUItem11=/Game/Widgets/Ability_Wheel
-MRUItem12=/Game/Movies/MainMenuFinal
-MRUItem13=/Game/Chloe/UI/Start_Menu
-MRUItem14=/Game/Movies/MenuMediaPlayer_Video
-MRUItem15=/Game/Levels/texturedzoo
-MRUItem16=/Game/Movies/MenuVideo1
-MRUItem17=/Game/Movies/MenuMediaPlayer
-MRUItem18=/Game/Movies/UE4_Logo_test
-MRUItem19=/Game/b024899h/Particle_Effects/Hurricane/Swing_P
+MRUItem0=/Game/Will/Remove_Area1_Blocker
+MRUItem1=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem2=/Game/Will/Area1_Blocker_MinableRubble
+MRUItem3=/Game/Will/Miner
+MRUItem4=/Game/Levels/Area1-Rework
+MRUItem5=/Game/Levels/MainMenu
+MRUItem6=/Game/Chloe/UI/Start_Menu
+MRUItem7=/Game/TopDownBP/Blueprints/MainMenuMode
+MRUItem8=/Game/Movies/FinalMainMenuMediaPlayer
+MRUItem9=/Game/Movies/FinalMainMenuVideo
+MRUItem10=/Game/area_1_sequencer
+MRUItem11=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem12=/Game/Sequence_1
+MRUItem13=/Game/Levels/Area2-MarketMeshStart
+MRUItem14=/Game/Levels/Area2-Market
+MRUItem15=/Game/c024816h/BasePickUp
+MRUItem16=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
+MRUItem17=/Game/AIAgent/BossAI
+MRUItem18=/Game/AIAgent/Proto_controller
+MRUItem19=/Game/AIAgent/DerivedClasses/HoundEnemyAI
 
 [WidgetTemplatesExpanded]
 Extra=False
