--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,10 +103,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Levels/Area1-Rework
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Levels/Area2-MarketMeshStart
-MRUItem3=/Game/Levels/Area2-Market
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/Area2-Market
+MRUItem2=/Game/Levels/Area1-Rework
+MRUItem3=/Game/Levels/Area2-MarketMeshStart
 MRUItem4=/Game/Levels/texturedzoo
 MRUItem5=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem6=/Game/Levels/Demo
@@ -263,6 +263,7 @@ MovieSceneBindingOverrides=TopDownCharacter_C.Collision.Collision,StructProperty
 DefaultLevelSequenceInstanceData=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 BossAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 Miner_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
+Pause_Menu_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -312,17 +313,11 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Levels/Area1-Rework
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/area_1_sequencer.area_1_sequencer
-OpenAssetsAtExit=/Game/Chloe/UI/Start_Menu.Start_Menu
-OpenAssetsAtExit=/Game/Will/Miner.Miner
-OpenAssetsAtExit=/Game/Will/Area1_Blocker_MinableRubble.Area1_Blocker_MinableRubble
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon.BaseWeapon
-OpenAssetsAtExit=/Game/Will/Remove_Area1_Blocker.Remove_Area1_Blocker
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3584,10 +3579,10 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -4567,26 +4562,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Will/Remove_Area1_Blocker
-MRUItem1=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
-MRUItem2=/Game/Will/Area1_Blocker_MinableRubble
-MRUItem3=/Game/Will/Miner
-MRUItem4=/Game/Levels/Area1-Rework
-MRUItem5=/Game/Levels/MainMenu
-MRUItem6=/Game/Chloe/UI/Start_Menu
-MRUItem7=/Game/TopDownBP/Blueprints/MainMenuMode
-MRUItem8=/Game/Movies/FinalMainMenuMediaPlayer
-MRUItem9=/Game/Movies/FinalMainMenuVideo
-MRUItem10=/Game/area_1_sequencer
-MRUItem11=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem12=/Game/Sequence_1
-MRUItem13=/Game/Levels/Area2-MarketMeshStart
-MRUItem14=/Game/Levels/Area2-Market
-MRUItem15=/Game/c024816h/BasePickUp
-MRUItem16=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
-MRUItem17=/Game/AIAgent/BossAI
-MRUItem18=/Game/AIAgent/Proto_controller
-MRUItem19=/Game/AIAgent/DerivedClasses/HoundEnemyAI
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem2=/Game/Levels/Area2-Market
+MRUItem3=/Game/Chloe/UI/Pause_Menu
+MRUItem4=/Game/Will/Remove_Area1_Blocker
+MRUItem5=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
+MRUItem6=/Game/Will/Area1_Blocker_MinableRubble
+MRUItem7=/Game/Will/Miner
+MRUItem8=/Game/Levels/Area1-Rework
+MRUItem9=/Game/Chloe/UI/Start_Menu
+MRUItem10=/Game/TopDownBP/Blueprints/MainMenuMode
+MRUItem11=/Game/Movies/FinalMainMenuMediaPlayer
+MRUItem12=/Game/Movies/FinalMainMenuVideo
+MRUItem13=/Game/area_1_sequencer
+MRUItem14=/Game/Sequence_1
+MRUItem15=/Game/Levels/Area2-MarketMeshStart
+MRUItem16=/Game/c024816h/BasePickUp
+MRUItem17=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
+MRUItem18=/Game/AIAgent/BossAI
+MRUItem19=/Game/AIAgent/Proto_controller
 
 [WidgetTemplatesExpanded]
 Extra=False
